# MovableComponents

./: CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  MainController.cpp  MainController.h  README.md  main.cpp  qml.qrc
Core/: DataGenerator.cpp  MainController.cpp  MainController.h
UiCore/: AppStyle.qml
View/: DataRectangle.qml  main.qml
assets/config/: config.qrc  data_config_1.json  data_config_3.json  data_config_5.json  qml_config.json
assets/qml/: DataRectangle.qml  main.qml  qml.qrc
